# finn_sources

./: .gitignore  README.md  compatible_finn_chiplet.sv  create_hls_project.py  custom_types.py  feeder_config.json  import_finn_to_cv32.py  import_finn_to_cv32_win.py  make_finn_feeder.py  script_win.tcl  templates.py  templates_win.py  teste.cpp  tester.py  util.py  vivado_pid13870.str
feeder/finn_feeder_chiplet/: finn_feeder_dataset_0.cpp
feeder/finn_feeder_chiplet/finn_feeder_chiplet/: .cproject  .project  .vitis_hls_log_all.xml  hls.app
hls_sources/: finn_feeder.h  finn_feeder_chiplet.cpp  finn_feeder_chiplet.h  finn_feeder_chiplet_test.cpp  finn_feeder_test.cpp
test_IPs/xc7a100tcsg324_1/finn_feeder_21b_16/drivers/finn_feeder_21b_16_v1_0/src/: CMakeLists.txt  Makefile  xfinn_feeder_21b_16.c  xfinn_feeder_21b_16.h  xfinn_feeder_21b_16_hw.h  xfinn_feeder_21b_16_linux.c  xfinn_feeder_21b_16_sinit.c
teste_hls_case2_bkp/: .vitis_hls_log_all.xml  finn_feeder_chiplet.cpp  finn_feeder_chiplet.h  finn_feeder_chiplet_test.cpp
teste_hls_case2_bkp/solution1/: solution1.aps  solution1.directive  solution1_data.json
teste_hls_case3_bkp/: .cproject  .project  finn_feeder_chiplet.cpp  finn_feeder_chiplet.h  finn_feeder_chiplet_test.cpp  hls.app  kernel.xml
teste_hls_case3_bkp/.apc/: autopilot.apfmapping
teste_hls_case3_bkp/solution1/: solution1.aps  solution1_data.json
teste_hls_case4_bkp/: .cproject  .vitis_hls_log_all.xml  finn_feeder_chiplet_test.cpp  kernel.xml
teste_hls_case4_bkp/solution1/: solution1.aps  solution1.directive  solution1_data.json
(+562 files in other folders)
